# NPUcoreLA

./: .gitignore  Makefile  README.md
docs/: Ext4文件系统实现探索：与FAT32的比较分析.md  NPUcore+操作系统使用说明书.md  NPUcoreLA操作系统使用说明书.md  debug.md  qemu运行NPUcoreLA.md  rust学习记录.md  内存管理.md  文件系统.md  核心系统调用的实现.md  系统调用.md  进程管理.md  适配qemu-2k1000过程.md
easy-fs-fuse/: .gitignore
os/: Cargo.toml  Makefile  buildfs.sh  run_script
os/.cargo/: config
os/cargo/: config
os/src/: linker.in.ld  linker.ld  main.rs  preload_app.S
os/src/fs/: mod.rs  (+2 more)
os/src/fs/ext4/lwext4_rust/: .gitmodules  Cargo.toml  build.rs
os/src/fs/ext4/lwext4_rust/c/: lwext4-make.patch  musl-generic.cmake  ulibc.c  wrapper.h
os/src/fs/ext4/lwext4_rust/doc/: filesystem接口.md  rust-ext4-fs-support.md
os/src/fs/ext4/lwext4_rust/doc/RefFS/: RefFS-build.md
os/src/fs/ext4/lwext4_rust/examples/: Cargo.toml  Makefile  rust-toolchain.toml
os/src/fs/ext4/lwext4_rust/examples/.cargo/: config
os/src/fs/ext4/lwext4_rust/examples/src/: disk.rs  ext4fs.rs  main.rs  vfs_ops.rs  virtio_impl.rs
os/src/fs/ext4/lwext4_rust/examples/src/boot/: entry64.asm  lang_items.rs  linker64.ld  logger.rs  mod.rs  sbi.rs
os/src/fs/ext4/lwext4_rust/src/: bindings.rs  blockdev.rs  file.rs  lib.rs  ulibc.rs
user/: Makefile
user/loongarch64/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  getcwd  getdents  getpid  getppid  gettimeofday  mkdir_  mmap  mount  munmap  open  openat  pipe  read  run-all.sh  sleep  statx  test_echo  times  umount  uname  unlink  wait  waitpid  write  yield
user/src/: lib.rs  syscall.rs  usr_call.rs
(+58 files in other folders)
